# gfTools

./: .gitignore  .pylintrc  BUILDING.md  CMakeLists.txt  LICENSE  README.md  __init__.py  build.py  mayaInstall.py  mayaUninstall.py  pylintInitHook.py
core/_studies/CMakeLearning/Executable/: CMakeLists.txt
core/_studies/testPyExtension/: CMakeLists.txt  setup.py
core/_studies/testPyExtension/source/: CMakeLists.txt  test.cpp
core/gfRig/: CMakeLists.txt  attribute.cpp  utils.cpp  version.hpp.in
core/gfRig/headers/: attribute.hpp  framework.hpp  gfTools.hpp  utils.hpp
core/gfRig/python/: attributeWrapper.hpp  gfRigWrapper.cpp  gfToolsWrapper.hpp  utilsWrapper.hpp
core/plugin/__DEV/: CMakeLists.txt
core/plugin/__DEV/AETemplates/: AEgfRigIKVChainTemplate.mel  AEgfRigPSDVectorAngleTemplate.mel  AEgfUtilAimConstraintTemplate.mel  AEgfUtilAngleMathTemplate.mel  AEgfUtilAngleScalarMathTemplate.mel  AEgfUtilAngleToDoubleTemplate.mel  AEgfUtilAngleTrigMathTemplate.mel  AEgfUtilBlendTransformTemplate.mel  AEgfUtilDecompRowMtxTemplate.mel  AEgfUtilDoubleToAngleTemplate.mel  AEgfUtilEulerMathTemplate.mel  AEgfUtilEulerScalarMathTemplate.mel  AEgfUtilEulerToVectorTemplate.mel  AEgfUtilParentConstraintTemplate.mel  AEgfUtilVectorToEulerTemplate.mel
core/plugin/__DEV/C++/: CMakeLists.txt
core/plugin/__DEV/Python/: gfToolsNodes.py  n_gfAimTransform.py  n_gfDebugPv.py  n_gfDebugVector.py  n_gfDebugVector2.py  n_gfDebugVector3.py  n_gfRigIKVChain.py  n_gfRigPSDVectorAngle.py  n_gfUtilAimConstraint.py  n_gfUtilAngleMath.py  n_gfUtilAngleScalarMath.py  n_gfUtilAngleToDouble.py  n_gfUtilAngleTrigMath.py  n_gfUtilBlendTransform.py  n_gfUtilDecompRowMatrix.py  n_gfUtilDoubleToAngle.py  n_gfUtilEulerMath.py  n_gfUtilEulerScalarMath.py  n_gfUtilEulerToVector.py  n_gfUtilParentConstraint.py  n_gfUtilVectorToEuler.py
core/plugin/__DEV/TestProjectSrc/: CMakeLists.txt
core/plugin/__DEV/__INIT__/: MPxLocatorNode_INIT.py  MPxNode_INIT.cpp  MPxNode_INIT.py  MPxTransform_INIT.py
core/widgets/: CMakeLists.txt  test2.ui
core/widgets/dev/: CMakeLists.txt  test2.qrc
core/widgets/dev/modules/: FindMaya.cmake  FindPySide2.cmake  FindShiboken2.cmake
core/widgets/dev/python/: FlowLayout.py  TitleBar.py
core/widgets/dev/source/: CMakeLists.txt  helloWorld.cpp  mainPlugin.cpp  w_gfCloseButton.cpp
core/widgets/python/: gfLayouts.py  gfMayaWidgets.py  gfWidgets.py  widgets.py
core/widgets/source/: CMakeLists.txt  analogclock.cpp  analogclockplugin.cpp  main.cpp  mainPlugin.cpp  mainwindow.cpp
core/widgets/source/headers/: analogclockplugin.h  mainPlugin.h  mainwindow.h
docs/: CMakeLists.txt  Doxyfile.in
docs/pages/: mainPage.md  subpage1.md  subsystem1.md
plug-ins/dev/cpp/: CMakeLists.txt  build.py
plug-ins/dev/cpp/modules/: FindMaya.cmake
plug-ins/dev/cpp/source/: CMakeLists.txt  mainPlugin.cpp  n_gfDebugVector.cpp  n_gfRigIKVChain.cpp  n_gfRigIKVChain2.cpp  n_gfRigMeshController.cpp  n_gfRigMeshController2.cpp  n_gfRigPSDVectorAngle.cpp  n_gfRigTwistExtractor.cpp  n_gfUtilAimConstraint.cpp  n_gfUtilAngleMath.cpp  n_gfUtilAngleScalarMath.cpp  n_gfUtilAngleTrigMath.cpp  n_gfUtilBlendTransform.cpp  n_gfUtilDoubleToAngle.cpp  n_gfUtilEulerMath.cpp  n_gfUtilEulerScalarMath.cpp  n_gfUtilEulerToVector.cpp  n_gfUtilFindParamFromCurveLength.cpp  n_gfUtilParentConstraint.cpp  n_gfUtilPoleVectorConstraint.cpp  n_gfUtilSpaceConstraint.cpp  n_gfUtilVectorToEuler.cpp
plugin/maya/: CMakeLists.txt
plugin/maya/AETemplates/: AEgfDecompRowMtxTemplate.mel
plugin/maya/dev/cpp/: CMakeLists.txt
plugin/maya/dev/python/: m_gfToolsMenu.py  n_gfRigIKVChain.py  n_gfRigMeshController2.py  n_gfUtilAngleScalarMath.py  n_gfUtilVectorToEuler.py
plugin/maya/main/: CMakeLists.txt  mainPlugin.cpp.in
plugin/maya/main/source/: CMakeLists.txt  mainPlugin.cpp
plugin/maya/nodes/: CMakeLists.txt  mainPlugin.cpp.in  n_gfRigMeshController.cpp  n_gfUtilEulerToVector.cpp  n_gfUtilFindParamFromCurveLength.cpp
plugin/maya/nodes/headers/: n_gfRigHelperJoint.h  n_gfRigMeshController.h  n_gfUtilAngleToDouble.h
plugin/maya/nodes/mpx/: MPxLocatorNode.cpp
plugin/maya/nodes/python/: n_gfDebugGeometry.py  n_gfDebugMatrix.py  n_gfRigDistributeAlongCurve.py  n_gfRigDistributeAlongSurface.py  n_gfRigPSDVectorAngle.py  n_gfRigQuadraticCurve.py  n_gfUtilAngleMath.py  n_gfUtilAngleTrigMath.py  n_gfUtilBlendTransform.py  n_gfUtilDecompRowMatrix.py  n_gfUtilDoubleToAngle.py  n_gfUtilEulerScalarMath.py  n_gfUtilEulerToVector.py  n_gfUtilParentConstraint.py
plugin/maya/nodes/source/: CMakeLists.txt  mainPlugin.cpp  n_gfRigDistributeAlongSurface.cpp  n_gfRigHelperJoint.cpp  n_gfRigPSDVectorAngle.cpp  n_gfUtilAimConstraint.cpp  n_gfUtilAngleScalarMath.cpp  n_gfUtilAngleToDouble.cpp  n_gfUtilEulerMath.cpp  n_gfUtilParentConstraint.cpp  n_gfUtilSpaceConstraint.cpp  n_gfUtilVectorToEuler.cpp
plugin/maya/nodes/templates/: MPxNode.py
plugin/maya/nodes2/: CMakeLists.txt  angleMath.cpp  angleTrig.cpp  ikVChain.cpp  ikVChain2.cpp  mainPlugin.cpp.in  poseReader.cpp  visualizeVector.cpp
plugin/maya/nodes2/headers/: angleMath.hpp  angleTrig.hpp  ikVChain.hpp  ikVChain2.hpp  poseReader.hpp  visualizeVector.hpp
scripts/: CMakeLists.txt  mayaInstall.py  mayaUninstall.py
scripts/maya/: AEgfEulerMathTemplate.mel  gfToolsLauncher.py  gfToolsMenu.py  gfToolsShelf.py  mayaInstall.py  mayaUninstall.py  userSetup.py
scripts/maya/AETemplates/: AEgfAngleScalarMathTemplate.mel  AEgfAngleTrigTemplate.mel  AEgfEulerScalarMathTemplate.mel  AEgfEulerToVectorTemplate.mel  AEgfPoseReaderTemplate.mel  AEgfTwistExtractorTemplate.mel
scripts/maya/shelves/: shelf_gfTools.mel
scripts/standalone/: gfTools.py
tools/maya/gfUtilitiesBelt/: CMakeLists.txt  run.py
tools/maya/gfUtilitiesBelt/__Prototype/: testCosmos.py  testUILoader.py  testUILoader2.py
tools/maya/gfUtilitiesBelt/core/: appInfo.py  config.py  customTools.py  getMayaInfo.py  pockets.py  resources.py  startup.py  ui.py
tools/maya/gfUtilitiesBelt/gui/: resources.qrc  win_about.ui  win_add.ui  win_main.ui  win_settings.ui
tools/maya/gfUtilitiesBelt/pockets/: test.gfPocket
(+397 files in other folders)
